removed customer info

--- a/labs/lab04/lab04.adoc
+++ b/labs/lab04/lab04.adoc
@@ -151,7 +151,7 @@ $ mvn clean spring-boot:run
 
 == Create Spring Cloud Config Server instance
 
-. Now that our application is ready to read its config from a cloud config server, we need to deploy one!  This can be done through cloudfoundry using the services marketplace.  Browse to the marketplace in Pivotal Cloudfoundry Apps Manager, https://apps.cfpoc2.internal.t-mobile.com, navigate to the space you have been using to push your app, and select Config Server:
+. Now that our application is ready to read its config from a cloud config server, we need to deploy one!  This can be done through cloudfoundry using the services marketplace.  Browse to the marketplace in Pivotal Cloudfoundry Apps Manager and navigate to the space you have been using to push your app, and select Config Server:
 +
 image::images/config-scs.jpg[]
 
@@ -179,7 +179,7 @@ image::images/config-scs3.jpg[]
 [source, yml]
 ---------------------------------------------------------------------
   env:
-    TRUST_CERTS: api.cfpoc2.internal.t-mobile.com
+    TRUST_CERTS: api.YOUR.SYSTEM.DOMAIN
   services:
   - config-server
 ---------------------------------------------------------------------
@@ -198,7 +198,7 @@ applications:
   buildpack: java_buildpack_offline
   timeout: 180
   env:
-    TRUST_CERTS: https://api.cfpoc2.internal.t-mobile.com
+    TRUST_CERTS: https://api.YOUR.SYSTEM.DOMAIN
     JAVA_OPTS: -Djava.security.egd=file:///dev/urandom
   services:
   - config-server
